# rust-corosync

./: .gitignore  Cargo.toml  README.md  build.rs  regenerate-sys.sh
.github/workflows/: ci.yml
rust-corosync-sys/: Cargo.toml  build.rs  regenerate.sh
rust-corosync-sys/src/: cfg.rs  cmap.rs  cpg.rs  lib.rs  quorum.rs  votequorum.rs
src/: cfg.rs  cmap.rs  cpg.rs  lib.rs  quorum.rs  votequorum.rs
src/sys/: cpg.rs
tests/: Cargo.toml  build.rs
tests/src/: main.rs
